--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -22,9 +22,9 @@
         <tr>
           <td><%= book.title %></td>
           <td><%= book.body %></td>
-          <td><%= link_to "show",'/books/:id', book_path(book.id) ,method: :get %>
-          <td><a href = "/books/:id/edit">edit</a></td>
-          <td><%= link_to 'Destroy', method: :delete, data: { confirm: '削除しますか？' } %></td>
+          <td><%= link_to "show",book_path(book.id) %></td>
+          <td><%= link_to "edit",edit_book_path(book.id) %></td>
+          <td><%= link_to "delete", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
         </tr>
       <% end %>
     </tbody>
