機能の実装完了

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -30,7 +30,7 @@
     </tbody>
   </table>
   
-  <%= form_with model: @book, url: '/books/create' do |f| %>
+  <%= form_with model: @book, url: '/books', id: "book.id" do |f| %>
   
   <p>title</p>
   <%= f.text_field :title %>
