--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,11 +1,29 @@
+<style>
+  main {
+        margin: 33px;
+    }
+</style>
+<main>
 <h1>Editing Book</h1>
 
-<%= form_with model: @book, url:book_path(@book.id), method: :patch do |f| %>
+<%= form_with model: @book, url: book_path(@book.id) do |f| %>
 
+   <% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+  <% end %>
+  
   <p>title</p>
   <%= f.text_field :title %>
   <p>body</p>
   <%= f.text_area :body %>
   
   <%= f.submit 'Update Book' %>
+  
+  <p><%= link_to "show",book_path(@book.id) %>|<%= link_to "back",books_path %></p>
 <% end %>
+</main>
