--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,9 +1,27 @@
 <style>
   body {
+    background-color: #fff;
+    color: #333;
+    font-family: verdana, arial, helvetica, sans-serif;
+    font-size: 13px;
+    line-height: 18px;
     margin: 33px;
+  }
+  th {
+    padding-bottom: 5px;
+  }
+  td {
+    padding-bottom: 7px;
+    padding-left: 5px;
+    padding-right: 5px;
   }
   h1 {
     font-size: 24px;
+  }
+  .field_with_errors {
+    padding: 2px;
+    background-color: red;
+    display: table;
   }
 </style>
 <body>
@@ -18,13 +36,13 @@
       </tr>
     </thead>
     <tbody>
-      <% @book.each do |book| %>
+      <% @books.each do |book| %>
         <tr>
           <td><%= book.title %></td>
           <td><%= book.body %></td>
-          <td><%= link_to "show",book_path(book.id) %></td>
-          <td><%= link_to "edit",edit_book_path(book.id) %></td>
-          <td><%= link_to "delete", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
+          <td><%= link_to "Show",book_path(book.id) %></td>
+          <td><%= link_to "Edit",edit_book_path(book.id) %></td>
+          <td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
         </tr>
       <% end %>
     </tbody>
@@ -32,12 +50,27 @@
   
   <%= form_with model: @book, url: '/books', id: "book.id" do |f| %>
   
+  <% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+  <% end %>
+  
+  
   <p>title</p>
   <%= f.text_field :title %>
+  
+  
+  
   <p>body</p>
   <%= f.text_area :body %>
   
-  <%= f.submit 'create' %>
+  
+  
+  <p><%= f.submit 'Create Book' %></p>
   
   <% end %>
   
