--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -16,5 +16,5 @@
 <p><strong>body</strong>
 <%= @book.body %></p>
 
-<p><%= link_to "edit",edit_book_path(@book.id) %>|<%= link_to "back",books_path(@book.id) %></p>
+<p><%= link_to "Edit",edit_book_path(@book.id) %>|<%= link_to "Back",books_path %></p>
 </main>
