--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,6 +2,11 @@
   main {
         margin: 33px;
     }
+  .field_with_errors {
+      padding: 2px;
+      background-color: red;
+      display: table;
+    }
 </style>
 <main>
 <h1>Editing Book</h1>
